# madpy-textual-demo

./: .pre-commit-config.yaml  README.md  pyproject.toml
demo/: README.md  stopwatch_01.py  stopwatch_02.py  stopwatch_03.py  stopwatch_04.py  stopwatch_05.py  stopwatch_06.py
