[tool.poetry]
name = "madpy-textualize-demo"
version = "0.1.0"
description = ""
authors = ["Josh Karpel <josh.karpel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
textual = {version="^0.9.1", extras=["dev"]}

[tool.black]
line-length = 100
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 100

[tool.pycln]
all = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
